[gd_scene load_steps=6 format=3 uid="uid://drny8xxvq6ide"]

[ext_resource type="Script" uid="uid://dgf0qvwkernp7" path="res://Scripts/Pickups/EXP.gd" id="1_cpms5"]
[ext_resource type="Texture2D" uid="uid://cgru2l1wrc00p" path="res://Art/Pickups/EXP.png" id="1_xc8gy"]
[ext_resource type="Shader" uid="uid://dmf4uxkb8ekdt" path="res://Prefabs/Shaders/Pickup.gdshader" id="2_pdtw0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rripr"]
resource_local_to_scene = true
shader = ExtResource("2_pdtw0")
shader_parameter/size_effect = 0.1
shader_parameter/speed = 0.5
shader_parameter/highlight_strength = 0.5
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = true

[sub_resource type="CircleShape2D" id="CircleShape2D_cpms5"]

[node name="EXP" type="Area2D"]
collision_layer = 17
collision_mask = 2
script = ExtResource("1_cpms5")
Amount = 500

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_rripr")
texture = ExtResource("1_xc8gy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cpms5")

[node name="Timer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[node name="PollTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PollTimer" to="." method="_on_poll_timer_timeout"]
